style: small tweak to product details image to prevent shifting

--- a/src/client/src/views/product-details/ProductDetailsContent.css
+++ b/src/client/src/views/product-details/ProductDetailsContent.css
@@ -20,9 +20,9 @@
 }
 
 .product-details .product-image {
-    max-height: 400px;
-    max-width: 300px;
+    height: 400px;
     mix-blend-mode: multiply;
+    width: 300px;
 }
 
 .product-details dt::after {
